--- a/index.html
+++ b/index.html
@@ -337,11 +337,11 @@
         <section id="video">
             <h2>Video</h2>
             <div class="video-container">
-                <iframe width="560" height="315" src="An-XQTW1wwaEguOtxa3wtFCqGfTc-rhLovVKzJkL9zkwQg9MOW9_xWeE0pqcoMJVrXpgIqOawzlcexNJgoGMPrEG.mp4" frameborder="0" allowfullscreen></iframe>  
+                <iframe width="560" height="315" src="https://youtu.be/foQ-bTPueZ4" frameborder="0" allowfullscreen></iframe>  
             </div>
 
             <div class="video-container">
-                <iframe width="560" height="315" src="360021586_1370585176832757_4715836241269091301_n.mp4"  frameborder="0" allowfullscreen></iframe>  
+                <iframe width="560" height="315" src="https://youtu.be/5QVKtPmoQ28"  frameborder="0" allowfullscreen></iframe>  
             </div>
 
             <div class="video-container">
