--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             </div>
 
             <div class="video-container">
-                <iframe width="560" height="315" src="https://youtu.be/EZEB3i4p6SQ"  frameborder="0" allowfullscreen></iframe>  
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=foQ-bTPueZ4"  frameborder="0" allowfullscreen></iframe>  
             </div>
 
             <section id="bilder">
