--- a/index.html
+++ b/index.html
@@ -337,15 +337,11 @@
         <section id="video">
             <h2>Video</h2>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://youtu.be/foQ-bTPueZ4" frameborder="0" allowfullscreen></iframe>  
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/hhQjHbm-l5I?si=ocV_wERoJwfxQyvV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <div class="video-container">
-                <iframe width="560" height="315" src="https://youtu.be/5QVKtPmoQ28"  frameborder="0" allowfullscreen></iframe>  
-            </div>
-
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/?v=foQ-bTPueZ4"  frameborder="0" allowfullscreen></iframe>  
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/foQ-bTPueZ4?si=rRsyxiiaCX38j2PC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
             </div>
 
             <section id="bilder">
