--- a/index.html
+++ b/index.html
@@ -336,16 +336,13 @@
 
         <section id="video">
             <h2>Video</h2>
+
             <div class="video-container">
-                <iframe width="560" height="315" src="An-XQTW1wwaEguOtxa3wtFCqGfTc-rhLovVKzJkL9zkwQg9MOW9_xWeE0pqcoMJVrXpgIqOawzlcexNJgoGMPrEG.mp4" frameborder="0" allowfullscreen></iframe>  
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/foQ-bTPueZ4?si=sXCQJLk72YDbTrF5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <div class="video-container">
-                <iframe width="560" height="315" src="360021586_1370585176832757_4715836241269091301_n.mp4"  frameborder="0" allowfullscreen></iframe>  
-            </div>
-
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/foQ-bTPueZ4?si=rRsyxiiaCX38j2PC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/foQ-bTPueZ4?si=sXCQJLk72YDbTrF5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <section id="bilder">
