--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
         <section id="om-oss">
             <h2>Om oss</h2>
             <p>Med liveband på festen blir det alltid en bättre fest när One Night Band spelar. Vi erbjuder en stor repertoar av musik från olika genrer och är bekväma på scenen. Vi involverar gärna både gäster och publik för en minnesvärd upplevelse.</p>
-            <p>One Night Band är baserat i Kristinehamn men spelar på olika fester runt om i städer som Örebro, Karlstad, Mariefred och Motala.</p>
-            <p><strong>Vi utgår från Kristinehamn och spelar på olika fester runt omkring, Örebro, Karlstad, Mariefred och Motala är exempel på städer som vi åker till. Hör av dig om du är intresserad av att låta oss göra er fest till den bästa festen.
+            <p>One Night Band är baserat i Kristinehamn men spelar på olika fester runt om i sverige.</p>
+            <p><strong> Kristinehamn, Örebro, Karlstad, Mariefred och Motala är exempel på städer som vi åker till. Hör av dig om du är intresserad av att låta oss göra er fest till den bästa festen.
 
 </strong></p>
             <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t39.30808-6/309396355_605872051107967_8457841451569775987_n.jpg?stp=dst-jpg_s960x960&_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=cMg2sbZmK00Ab5yQl85&_nc_ht=scontent-arn2-1.xx&oh=00_AfBiXoJ_sm1demP6j6f6a_85dvKSr903zwM95JngHrJY2A&oe=6633B08D" alt="Bild på bandet">
