--- a/index.html
+++ b/index.html
@@ -320,6 +320,9 @@
                 <input type="submit" value="Skicka">
             </form>
             <p>beroende på omständigheter och program. Ge en tydlig beskrivning på eventet, så blir det lättare för artisten att ge en passande offert.</p>
+            <a href="https://www.facebook.com/YourPageURL" target="_blank">
+  <img src="facebook_logo.png" alt="Facebook" width="40" height="40">
+</a>
         </section>
 
         <section id="faq">
