--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-
     <header>
       <h1>One Night Band</h1>
       <nav>
@@ -23,10 +22,11 @@
         </ul>
       </nav>
     </header>
+    
     <div class="pictures">  
-      <h1>Sammerbete med </h1>
-      <img src="Messenger_creation_71b5ff99-624d-41a4-8dd4-e776d9fd817f.jpeg"class="bottom-pic1"/>
-    <img src="Messenger_creation_7adb74f3-9798-4ce7-ab7b-bcafd3269975.jpeg"class="bottom-pic2"/>
+      <h1>Sammerbete med</h1>
+      <img src="Messenger_creation_71b5ff99-624d-41a4-8dd4-e776d9fd817f.jpeg" class="bottom-pic1"/>
+      <img src="Messenger_creation_7adb74f3-9798-4ce7-ab7b-bcafd3269975.jpeg" class="bottom-pic2"/>
     </div>
 
     <main>
@@ -43,11 +43,9 @@
           runt om i Sverige.
         </p>
         <p>
-          <strong
-            >Kristinehamn, Örebro, Karlstad, Mariefred och Motala är exempel på
+          <strong>Kristinehamn, Örebro, Karlstad, Mariefred och Motala är exempel på
             städer som vi åker till. Hör av dig om du är intresserad av att låta
-            oss göra er fest till den bästa festen.</strong
-          >
+            oss göra er fest till den bästa festen.</strong>
         </p>
         <img
           src="https://scontent-arn2-1.xx.fbcdn.net/v/t39.30808-6/309396355_605872051107967_8457841451569775987_n.jpg?stp=dst-jpg_s960x960&_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=cMg2sbZmK00Ab5yQl85&_nc_ht=scontent-arn2-1.xx&oh=00_AfBiXoJ_sm1demP6j6f6a_85dvKSr903zwM95JngHrJY2A&oe=6633B08D"
@@ -95,7 +93,7 @@
           <iframe
             width="560"
             height="315"
-           <iframe width="560" height="315" src="https://www.youtube.com/embed/foQ-bTPueZ4?si=14JthihCK5YP3hsg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            src="https://www.youtube.com/embed/foQ-bTPueZ4?si=14JthihCK5YP3hsg"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -123,7 +121,7 @@
             <img src="onenight5.jpg" alt="Bild 5" />
           </div>
           <div class="slide">
-            <img src="onenight 6.jpg" alt="Bild 6" />
+            <img src="onenight6.jpg" alt="Bild 6" />
           </div>
           <button class="prev" onclick="changeSlide(-1)">Föregående</button>
           <button class="next" onclick="changeSlide(1)">Nästa</button>
@@ -132,7 +130,8 @@
     </main>
 
     <footer>
-    <p>&copy; 2024 One Night Band. Alla rättigheter förbehållna.</p>
+      <p>&copy; 2024 One Night Band. Alla rättigheter förbehållna.</p>
     </footer>
   </body>
 </html>
+
